kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: artege
  labels:
    name: artege_app
