kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiii-project-deployment
  namespace: artege
spec:
  replicas: 2
  selector:
    matchLabels:
      app: artege_app
  template:
    metadata:
      labels:
        app: artege_app
    spec:
      containers:
        - name: kiii-project
          image: stefani01/kiii-project:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          command: ["python","./manage.py", "runserver", "0.0.0.0:80"]
