kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kiii-project-service
  namespace: artege
spec:
  selector:
    app: artege_app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
