kubernetes/stateful-set.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kiii-project-postgres
  namespace: artege
spec:
  serviceName: kiii-project-postgres-service
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
        namespace: artege
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
              name: postgres-port
          volumeMounts:
            - name: kiii-project-postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: kiii-project-postgres-data
          persistentVolumeClaim:
            claimName: kiii-project-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: kiii-project-postgres-service
  namespace: artege
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    name: postgres
    app: postgres
